# agent-ghost

./: .gitignore  ADE_AGENT_SURFACE_AGENT_HANDOFF.md  ADE_AGENT_SURFACE_IMPLEMENTATION_PLAN.md  ADE_AGENT_SURFACE_PACKET.md  ADE_AGENT_SURFACE_REMEDIATION_SPEC.md  ADE_AGENT_SURFACE_TASKS.md  ADE_AGENT_SURFACE_VERIFICATION_PLAN.md  AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_v2.md  AGENT_GHOST_CATEGORY_COVERAGE.md  AGENT_GHOST_CATEGORY_COVERAGE_LOG.md  AGENT_GHOST_FIX_SWEEP_COVERAGE.md  AGENT_GHOST_SWEEP_WORKLOG.md  AGENT_LOOP_SEQUENCE_FLOW.md  API_CONTRACT_RELEASE_AUDIT.md  AUTOMATION_CATEGORY_COVERAGE_LOG.md  AUTOMATION_WORKLOG.md  AUTONOMY_CONTROL_PLANE_TASKS.md  CATEGORY_COVERAGE_LOG.md  CI_OVERNIGHT_PLAN.md  COMPREHENSIVE_AUDIT.md  CONNECTIVITY_AUDIT.md  CONSOLIDATED_AUDIT.md  CONTRACT_AUTHORITY_PASS.md  CONVERGENCE_MONITOR_SEQUENCE_FLOW.md  CORP_POLICY.md  COSTS_AGENT_HANDOFF.md  COSTS_MASTER_REMEDIATION_SPEC.md  COSTS_REMEDIATION_IMPLEMENTATION.md  COSTS_REMEDIATION_PACKAGE.md  COSTS_REMEDIATION_TASKS.md  Cargo.toml  DEAD_WRITE_PATHS_AUDIT.md  ERROR_SWALLOWING_AUDIT.md  FILE_MAPPING.md  GATEWAY_BOOTSTRAP_DEGRADED_MODE_SEQUENCE_FLOW.md  GHOST_ADE_IMPLEMENTATION.md  GHOST_EXTRACT.md  INFRASTRUCTURE_AUDIT.md  INTER_AGENT_MESSAGE_FLOW_SEQUENCE.md  (+52 more)
crates/convergence-monitor/: Cargo.toml
crates/convergence-monitor/src/: config.rs  main.rs  monitor.rs  state_publisher.rs  validation.rs
crates/convergence-monitor/tests/: monitor_tests.rs
crates/cortex/cortex-convergence/: Cargo.toml
crates/cortex/cortex-core/: Cargo.toml
crates/ghost-agent-loop/: Cargo.toml
crates/ghost-agent-loop/examples/: live_safety_tests.rs  live_tool_tests.rs
crates/ghost-agent-loop/src/: circuit_breaker.rs  damage_counter.rs  itp_emitter.rs  lib.rs  output_inspector.rs  response.rs  runner.rs
crates/ghost-agent-loop/tests/: agent_loop_tests.rs  compressor_pipeline_tests.rs  credential_exfil_patterns.rs  observation_masking_tests.rs  runtime_safety_tests.rs
crates/ghost-audit/: Cargo.toml
crates/ghost-audit/src/: aggregation.rs  export.rs  lib.rs  query_engine.rs
crates/ghost-audit/tests/: audit_tests.rs
crates/ghost-backup/: Cargo.toml
crates/ghost-backup/src/: export.rs  import.rs  lib.rs  scheduler.rs
crates/ghost-backup/tests/: backup_tests.rs
crates/ghost-channels/: Cargo.toml
crates/ghost-channels/src/: adapter.rs  lib.rs  streaming.rs  types.rs
crates/ghost-channels/tests/: channel_tests.rs
crates/ghost-drift/: Cargo.toml
crates/ghost-drift/src/: lib.rs  main.rs
crates/ghost-egress/: Cargo.toml
crates/ghost-egress/src/: config.rs  domain_matcher.rs  ebpf_provider.rs  error.rs  lib.rs  pf_provider.rs  policy.rs  proxy_provider.rs
crates/ghost-egress/tests/: egress_e2e.rs  egress_tests.rs  property_tests.rs
crates/ghost-export/: Cargo.toml
crates/ghost-export/src/: analyzer.rs  lib.rs  timeline.rs
crates/ghost-export/tests/: export_tests.rs
crates/ghost-gateway/: Cargo.toml
crates/ghost-gateway/src/: autonomy.rs  backup_scheduler.rs  bootstrap.rs  channel_manager.rs  codex.rs  config.rs  config_watcher.rs  convergence_watcher.rs  db_pool.rs  gateway.rs  health.rs  itp_bridge.rs  itp_buffer.rs  itp_router.rs  lib.rs  main.rs  otel.rs  pc_control_runtime.rs  periodic.rs  pid.rs  proposal_watcher.rs  provider_runtime.rs  route_sets.rs  runtime.rs  runtime_safety.rs  runtime_status.rs  sandbox_reviews.rs  shutdown.rs  speculative_context.rs  state.rs
crates/ghost-gateway/tests/: authz_matrix_tests.rs  backup_operation_journal_tests.rs  bootstrap_audit_tests.rs  cli_tests.rs  compaction_under_load.rs  compatibility_gateway_tests.rs  connectivity_audit_tests.rs  consolidated_audit_tests.rs  convergence_api_tests.rs  gateway_tests.rs  itp_api_tests.rs  kill_switch_race.rs  operation_journal_tests.rs  orchestration_api_tests.rs  pause_gateway_tests.rs  secrets_config_tests.rs  skills_api_tests.rs  test_critical_path.rs  test_health.rs  websocket_contract_tests.rs
crates/ghost-identity/: Cargo.toml
crates/ghost-identity/src/: corp_policy.rs  drift_detector.rs  identity_manager.rs  keypair_manager.rs  lib.rs  soul_manager.rs  user.rs
crates/ghost-identity/tests/: identity_tests.rs
crates/ghost-integration-tests/: Cargo.toml
crates/ghost-integration-tests/benches/: convergence_bench.rs
crates/ghost-integration-tests/examples/: live_smoke_test.rs
crates/ghost-integration-tests/src/: lib.rs
crates/ghost-integration-tests/tests/: adversarial.rs  integration.rs  property.rs
crates/ghost-kill-gates/: Cargo.toml
crates/ghost-kill-gates/src/: chain.rs  config.rs  gate.rs  lib.rs  quorum.rs  relay.rs
crates/ghost-llm/: Cargo.toml
crates/ghost-llm/src/: auth.rs  cost.rs  fallback.rs  lib.rs  provider.rs  proxy.rs  quarantine.rs  router.rs  streaming.rs  tokens.rs
crates/ghost-llm/tests/: auth_tests.rs  llm_tests.rs
crates/ghost-marketplace/: Cargo.toml
crates/ghost-marketplace/src/: contracts.rs  credits.rs  discovery.rs  error.rs  lib.rs  listings.rs  reviews.rs
crates/ghost-mesh/: Cargo.toml
crates/ghost-mesh/src/: discovery.rs  error.rs  lib.rs  protocol.rs  traits.rs  types.rs
crates/ghost-mesh/tests/: mesh_e2e.rs  safety_proptest.rs  safety_tests.rs  transport_tests.rs  trust_proptest.rs  trust_tests.rs  types_proptest.rs  types_tests.rs
crates/ghost-migrate/: Cargo.toml
crates/ghost-migrate/src/: lib.rs  migrator.rs
crates/ghost-migrate/tests/: migrate_tests.rs
crates/ghost-oauth/: Cargo.toml
crates/ghost-oauth/src/: broker.rs  error.rs  lib.rs  provider.rs  storage.rs  types.rs
crates/ghost-pc-control/: Cargo.toml
crates/ghost-policy/: Cargo.toml
crates/ghost-proxy/: Cargo.toml
crates/ghost-secrets/: Cargo.toml
crates/ghost-signing/: Cargo.toml
crates/ghost-skills/: Cargo.toml
crates/itp-protocol/: Cargo.toml
crates/read-only-pipeline/: Cargo.toml
crates/simulation-boundary/: Cargo.toml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  tray.rs
src-tauri/test-agent-folder/: agent-note.txt
(+1181 files in other folders)
