[workspace]
resolver = "2"
members = [
    "crates/ghost-signing",
    "crates/cortex/cortex-core",
    "crates/cortex/cortex-crdt",
    "crates/cortex/cortex-storage",
    "crates/cortex/cortex-temporal",
    "crates/cortex/cortex-decay",
    "crates/cortex/cortex-convergence",
    "crates/cortex/cortex-validation",
    "crates/ghost-policy",
    "crates/read-only-pipeline",
    "crates/convergence-monitor",
    "crates/itp-protocol",
    "crates/simulation-boundary",
    "crates/ghost-llm",
    "crates/ghost-identity",
    "crates/ghost-agent-loop",
    "crates/ghost-gateway",
    "crates/ghost-channels",
    "crates/ghost-skills",
    "crates/ghost-heartbeat",
    "crates/ghost-audit",
    "crates/ghost-backup",
    "crates/ghost-export",
    "crates/ghost-proxy",
    "crates/ghost-migrate",
    "crates/cortex/test-fixtures",
    "crates/cortex/cortex-observability",
    "crates/cortex/cortex-retrieval",
    "crates/cortex/cortex-privacy",
    "crates/cortex/cortex-multiagent",
    "crates/cortex/cortex-napi",
    "crates/ghost-secrets",
    "crates/ghost-oauth",
    "crates/ghost-egress",
    "crates/ghost-mesh",
    "crates/ghost-kill-gates",
    "crates/ghost-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
blake3 = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "vtab", "backup", "blob"] }

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# Regex
regex = "1"

# SHA-2 (for ITP privacy hashing — distinct from blake3)
sha2 = "0.10"

# Unicode normalization
unicode-normalization = "0.1"

# Once cell
once_cell = "1"

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Async trait
async-trait = "0.1"

# Internal crates
ghost-signing = { path = "crates/ghost-signing" }
cortex-core = { path = "crates/cortex/cortex-core" }
cortex-crdt = { path = "crates/cortex/cortex-crdt" }
cortex-storage = { path = "crates/cortex/cortex-storage" }
cortex-temporal = { path = "crates/cortex/cortex-temporal" }
cortex-decay = { path = "crates/cortex/cortex-decay" }
cortex-convergence = { path = "crates/cortex/cortex-convergence" }
cortex-validation = { path = "crates/cortex/cortex-validation" }
ghost-policy = { path = "crates/ghost-policy" }
read-only-pipeline = { path = "crates/read-only-pipeline" }
convergence-monitor = { path = "crates/convergence-monitor" }
itp-protocol = { path = "crates/itp-protocol" }
simulation-boundary = { path = "crates/simulation-boundary" }
ghost-llm = { path = "crates/ghost-llm" }
ghost-identity = { path = "crates/ghost-identity" }
ghost-agent-loop = { path = "crates/ghost-agent-loop" }
ghost-gateway = { path = "crates/ghost-gateway" }
ghost-channels = { path = "crates/ghost-channels" }
ghost-skills = { path = "crates/ghost-skills" }
ghost-heartbeat = { path = "crates/ghost-heartbeat" }
ghost-audit = { path = "crates/ghost-audit" }
ghost-backup = { path = "crates/ghost-backup" }
ghost-export = { path = "crates/ghost-export" }
ghost-proxy = { path = "crates/ghost-proxy" }
ghost-migrate = { path = "crates/ghost-migrate" }
cortex-test-fixtures = { path = "crates/cortex/test-fixtures" }
cortex-observability = { path = "crates/cortex/cortex-observability" }
cortex-retrieval = { path = "crates/cortex/cortex-retrieval" }
cortex-privacy = { path = "crates/cortex/cortex-privacy" }
cortex-multiagent = { path = "crates/cortex/cortex-multiagent" }
cortex-napi = { path = "crates/cortex/cortex-napi" }
ghost-secrets = { path = "crates/ghost-secrets", default-features = false }
ghost-oauth = { path = "crates/ghost-oauth" }
ghost-egress = { path = "crates/ghost-egress" }
ghost-mesh = { path = "crates/ghost-mesh" }
ghost-kill-gates = { path = "crates/ghost-kill-gates" }

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Encoding
base64 = "0.22"

# HTTP / Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
hyper = "1"

# Concurrency
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# WASM sandbox
wasmtime = "27"

# Notifications
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Rate limiting
governor = "0.6"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Serde YAML
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
incremental = true
debug = 2
opt-level = 0
