[package]
name = "ghost-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
libc = "0.2"
dirs = "5"
thiserror = "1"
