[package]
name = "ghost-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
libc = "0.2"
dirs = "5"
thiserror = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
