[package]
name = "convergence-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Independent convergence monitoring sidecar binary for the GHOST platform"

[[bin]]
name = "convergence-monitor"
path = "src/main.rs"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
ghost-gateway = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
rusqlite = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
