[package]
name = "ghost-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Queryable audit log engine with aggregation and export for the GHOST platform"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
