[package]
name = "ghost-backup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Encrypted state backup and restore for the GHOST platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
