[package]
name = "ghost-egress"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Per-agent network egress allowlisting with proxy, eBPF, and pf backends"

[features]
default = []
ebpf = []
pf = []

[dependencies]
# Workspace crates
cortex-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Regex (for domain matching)
regex = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP (for proxy provider)
hyper = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
toml = "0.8"
