[package]
name = "ghost-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data export analyzer — import conversation history from ChatGPT, Claude, Character.AI, Gemini"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
