[package]
name = "ghost-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ghost"
path = "src/main.rs"

[lib]
name = "ghost_gateway"
path = "src/lib.rs"

[features]
default = ["keychain"]
keychain = ["ghost-secrets/keychain"]
vault = ["ghost-secrets/vault"]
ebpf = ["ghost-egress/ebpf"]
pf = ["ghost-egress/pf"]

[dependencies]
# Workspace crates
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-temporal = { workspace = true }
cortex-convergence = { workspace = true }
cortex-validation = { workspace = true }
ghost-signing = { workspace = true }
ghost-policy = { workspace = true }
ghost-llm = { workspace = true }
ghost-secrets = { workspace = true }
ghost-identity = { workspace = true }
ghost-agent-loop = { workspace = true }
itp-protocol = { workspace = true }
simulation-boundary = { workspace = true }
read-only-pipeline = { workspace = true }
ghost-channels = { workspace = true }
ghost-skills = { workspace = true }
ghost-heartbeat = { workspace = true }
ghost-audit = { workspace = true }
ghost-backup = { workspace = true }
ghost-export = { workspace = true }
ghost-migrate = { workspace = true }
ghost-oauth = { workspace = true }
ghost-egress = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Async runtime
tokio = { workspace = true }

# SQLite
rusqlite = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }

# HTTP / Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# CLI
clap = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regex
regex = { workspace = true }

# Futures
futures = "0.3"

# Email (for notification dispatcher)
lettre = { workspace = true }

# Async trait
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
