[package]
name = "ghost-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ghost"
path = "src/main.rs"

[lib]
name = "ghost_gateway"
path = "src/lib.rs"

[features]
default = ["keychain"]
keychain = ["ghost-secrets/keychain"]
vault = ["ghost-secrets/vault"]
ebpf = ["ghost-egress/ebpf"]
pf = ["ghost-egress/pf"]

[dependencies]
# Workspace crates
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-crdt = { workspace = true }
cortex-temporal = { workspace = true }
cortex-validation = { workspace = true }
cortex-privacy = { workspace = true }
ghost-signing = { workspace = true }
ghost-llm = { workspace = true }
ghost-secrets = { workspace = true }
ghost-identity = { workspace = true }
ghost-agent-loop = { workspace = true }
ghost-audit = { workspace = true }
ghost-backup = { workspace = true }
ghost-export = { workspace = true }
ghost-migrate = { workspace = true }
ghost-oauth = { workspace = true }
ghost-egress = { workspace = true }
ghost-kill-gates = { workspace = true }
ghost-mesh = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Async runtime
tokio = { workspace = true }

# SQLite
rusqlite = { workspace = true }

# HTTP / Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# CLI
clap = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regex
regex = { workspace = true }

# Base64
base64 = { workspace = true }

# Futures
futures = "0.3"

# JWT authentication
jsonwebtoken = "9"

# Rate limiting
governor = { workspace = true }

# OpenAPI
utoipa = { workspace = true }

# Email (for notification dispatcher)
lettre = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
