[package]
name = "ghost-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ghost"
path = "src/main.rs"

[lib]
name = "ghost_gateway"
path = "src/lib.rs"

[features]
default = ["keychain"]
keychain = ["ghost-secrets/keychain"]
vault = ["ghost-secrets/vault"]
ebpf = ["ghost-egress/ebpf"]
pf = ["ghost-egress/pf"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies]
# Workspace crates
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-crdt = { workspace = true }
cortex-temporal = { workspace = true }
cortex-validation = { workspace = true }
cortex-privacy = { workspace = true }
cortex-convergence = { workspace = true }
cortex-observability = { workspace = true }
cortex-multiagent = { workspace = true }
ghost-signing = { workspace = true }
ghost-llm = { workspace = true }
ghost-secrets = { workspace = true }
ghost-identity = { workspace = true }
ghost-agent-loop = { workspace = true }
ghost-audit = { workspace = true }
ghost-backup = { workspace = true }
ghost-export = { workspace = true }
ghost-migrate = { workspace = true }
ghost-oauth = { workspace = true }
ghost-egress = { workspace = true }
ghost-kill-gates = { workspace = true }
ghost-mesh = { workspace = true }
ghost-policy = { workspace = true }
ghost-skills = { workspace = true }
ghost-pc-control = { workspace = true }
ghost-marketplace = { workspace = true }
cortex-embeddings = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing & HMAC
blake3 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# SQLite
rusqlite = { workspace = true }

# HTTP / Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Concurrency
dashmap = { workspace = true }
crossbeam-queue = "0.3"
parking_lot = "0.12"

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

# WebSocket client
tokio-tungstenite = { workspace = true }

# Secrets (for SecretString::expose_secret)
secrecy = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regex
regex = { workspace = true }

# Base64
base64 = { workspace = true }

# URL parsing (SSRF validation)
url = { workspace = true }

# Process management (PID file / signal handling)
libc = "0.2"

# File watching
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
tempfile = "3"

# Futures / Streams
futures = "0.3"
async-stream = "0.3"
async-trait = { workspace = true }

# JWT authentication
jsonwebtoken = "9"

# Rate limiting
governor = { workspace = true }

# OpenAPI
utoipa = { workspace = true }

# OpenTelemetry (behind `otel` feature flag)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Email (for notification dispatcher)
lettre = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
assert_cmd = "2"
predicates = "3"
reqwest = { workspace = true }
http-body-util = "0.1"
wat = "1"
