[package]
name = "ghost-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# This crate exists solely to compile and run workspace-level integration tests
# and benchmarks. It has no library code — only test and bench targets.

[dependencies]
# All workspace crates needed by integration tests and benchmarks
cortex-core = { workspace = true }
cortex-convergence = { workspace = true }
cortex-decay = { workspace = true }
cortex-temporal = { workspace = true }
cortex-validation = { workspace = true }
ghost-agent-loop = { workspace = true }
ghost-gateway = { workspace = true }
ghost-llm = { workspace = true }
ghost-policy = { workspace = true }
ghost-signing = { workspace = true }
itp-protocol = { workspace = true }
read-only-pipeline = { workspace = true }
simulation-boundary = { workspace = true }
cortex-multiagent = { workspace = true }
cortex-napi = { workspace = true }
cortex-observability = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-privacy = { workspace = true }
ghost-kill-gates = { workspace = true }
ghost-heartbeat = { workspace = true }
ghost-secrets = { workspace = true }
ghost-oauth = { workspace = true }
ghost-egress = { workspace = true }
ghost-mesh = { workspace = true }

# External deps used in tests/benches
async-trait = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
secrecy = { workspace = true }

[[bench]]
name = "convergence_bench"
harness = false
