[package]
name = "ghost-kill-gates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Distributed kill gate coordination for multi-node GHOST platforms"

[dependencies]
cortex-core = { workspace = true }
ghost-signing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
