[package]
name = "ghost-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider abstraction, model routing, fallback chains, and cost tracking"

[dependencies]
cortex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
