[package]
name = "ghost-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ghost agent marketplace — listings, contracts, credits, discovery"

[dependencies]
# Storage
cortex-storage = { workspace = true }
cortex-core = { workspace = true }
rusqlite = { workspace = true }

# Mesh traits & types
ghost-mesh = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs & time
uuid = { workspace = true }
chrono = { workspace = true }

# Crypto
blake3 = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
