[package]
name = "ghost-mesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ClawMesh Agent-to-Agent Payment Protocol — placeholder types and traits only (Phase 9)"

[features]
default = []
mesh = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
