[package]
name = "ghost-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenClaw to GHOST platform migration tool"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
