[package]
name = "ghost-oauth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Self-hosted OAuth 2.0 PKCE broker — agent never sees raw tokens"

[dependencies]
# Internal crates
ghost-secrets = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Crypto / secrets
age = "0.11"
secrecy = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = { workspace = true }
tempfile = "3"
toml = { workspace = true }
uuid = { workspace = true }
