[package]
name = "ghost-pc-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
ghost-skills = { workspace = true }
cortex-storage = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# SQLite (for audit queries via cortex-storage)
rusqlite = { workspace = true }

# Input simulation (cross-platform: Windows, macOS, Linux X11)
enigo = "0.6"

# Screen capture (cross-platform)
xcap = "0.8"

# Clipboard (cross-platform: Windows, macOS, Linux X11/Wayland)
arboard = "3"

# Process listing and management (cross-platform)
sysinfo = "0.32"

[dev-dependencies]
proptest = { workspace = true }
rusqlite = { workspace = true }
serde_yaml = { workspace = true }
