[package]
name = "ghost-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cedar-style policy engine with convergence tightening for the GHOST platform"

[dependencies]
cortex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
