[package]
name = "ghost-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local HTTPS proxy for passive convergence monitoring of AI chat platforms"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
