[package]
name = "ghost-signing"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Ed25519 signing primitives — leaf crate with zero ghost-*/cortex-* dependencies"

[dependencies]
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
toml = "0.8"
