[package]
name = "ghost-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-convergence = { workspace = true }
simulation-boundary = { workspace = true }
ghost-signing = { workspace = true }

async-trait = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true }
base64 = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
wat = "1"
