[package]
name = "itp-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Interaction Telemetry Protocol — event schema, privacy, and transports"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2"

[features]
default = []
otel = []

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
