[package]
name = "read-only-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Convergence-filtered read-only agent state snapshot assembly"

[dependencies]
cortex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
