[package]
name = "simulation-boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Simulation boundary enforcement — emulation pattern detection and reframing"

[dependencies]
cortex-core = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
unicode-normalization = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
